--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,9 +6,12 @@
         <div>
             <h1>This is Karen's Blog.</h1>
         </div>
-        <div>
-            <p>published: Today</p>
-            <h2><a href="">My first post</a></h2>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
